--- a/angular/app/src/app/app.component.html
+++ b/angular/app/src/app/app.component.html
@@ -1,8 +1,11 @@
 <app-header></app-header>
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
+<div class="row">
+    <div class="col-md-2" style="background-color: darkgray">
+      <app-menu></app-menu>
+    </div>
+    <div class="col-md-8">
       <router-outlet></router-outlet>
     </div>
-  </div>
 </div>
+
+
