--- a/angular/app/src/app/group-management/group-management.component.html
+++ b/angular/app/src/app/group-management/group-management.component.html
@@ -31,10 +31,10 @@
 
 <div class="row">
   <div class="col-md-4">
-    <p-pickList [source]="list1" [target]="list2">
-      <ng-template let-car pTemplate="item">
+    <p-pickList [source]="list1" [target]="list2" filterBy="brand">
+      <ng-template let-item pTemplate="item">
         <div class="ui-helper-clearfix">
-          <div style="font-size:14px;float:right;margin:15px 5px 0 0">item</div>
+          <div style="font-size:14px;float:right;margin:15px 5px 0 0">{{item}}</div>
         </div>
       </ng-template>
     </p-pickList>
