user management ui

--- a/angular/app/src/app/registration/registration.component.html
+++ b/angular/app/src/app/registration/registration.component.html
@@ -36,7 +36,7 @@
       </div>
       <div class="form-group">
         <label for="secAnswer">Answer:</label>
-        <input id="secAnswer" type="text" name="secAnswer" class="form-control" ngModel required>
+        <input id="secAnswer" type="password" name="secAnswer" class="form-control" ngModel required>
       </div>
       <button class="btn btn-primary" type="submit">Registration</button>
     </form>
