--- a/angular/app/src/app/group-management/group-management.component.html
+++ b/angular/app/src/app/group-management/group-management.component.html
@@ -1,3 +1,5 @@
+<button type="button" class="btn btn-danger" (click)="onTest()">test</button>
+<br>
 <h3>Create new group</h3>
 <div class="row">
   <div class="col-md-4">
