--- a/angular/app/src/app/group-management/group-management.component.html
+++ b/angular/app/src/app/group-management/group-management.component.html
@@ -5,11 +5,11 @@
   <div class="col-md-4">
     <form #groupCreateForm="ngForm" (ngSubmit)="onCreate(groupCreateForm)">
       <label for="name">Group name:</label>
-      <input id="name" type="text" name="name" class="form-control" ngModel required>
+      <input id="name" type="text" name="groupName" class="form-control" ngModel required>
       <label for="teamLeader">Team Leader:</label>
-      <select  id="teamLeader" name="selectedTeamLeader" class="selectpicker form-control" ngModel>
-        <option *ngFor="let user of users" > {{user}} </option>
-      </select>
+      <p-dropdown id="teamLeader" name="selectedTeamLeader" [options]="users" [(ngModel)]="selectedUser"
+                  ngModel required placeholder="Select a team leader!">
+      </p-dropdown>
       <button type="submit" class="btn btn-primary">Create</button>
     </form>
   </div>
