progress on group update feature

--- a/angular/app/src/app/group-management/group-management.component.html
+++ b/angular/app/src/app/group-management/group-management.component.html
@@ -65,7 +65,7 @@
       <div class="col-md-4">
     <p-multiSelect
       id="selectedDeputies"
-      name="selectedDesputies"
+      name="selectedDeputies"
       [options]="users"
       [style] = "{'width': '260px'}"
       ngModel
