--- a/angular/app/src/app/calendar/calendar.component.html
+++ b/angular/app/src/app/calendar/calendar.component.html
@@ -1,4 +1,32 @@
 <form>
+  <br><br>
+  <p-panel toggleable="true">
+    <p-table [value]="eventsModel" editMode="row">
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Start</th>
+          <th>End</th>
+          <th>Edit</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-item>
+        <tr>
+          <td>{{item.start}}</td>
+          <td>{{item.end}}</td>
+          <td><button>Edit</button></td>
+        </tr>
+      </ng-template>
+    </p-table>
+
+    <p-footer>
+      <div class="ui-helper-clearfix">
+        <p-splitButton [style]="{'float':'right'}" label="Save" icon="pi pi-check" (onClick)="save()" [model]="items"></p-splitButton>
+      </div>
+    </p-footer>
+  </p-panel>
+
+<br><br>
+
 <full-calendar
   #fullcalendar
   [editable]="false"
