--- a/angular/app/src/app/calendar/calendar.component.css
+++ b/angular/app/src/app/calendar/calendar.component.css
@@ -2,7 +2,14 @@
   font-weight: initial;
 }
 
+input{
+  width: 40%;
+}
 
-.ui-table .ui-table-tbody>tr>td.ui-editing-cell {
-  display: flex;
+.ui-table table {
+  width: 100%;
+}
+
+body .ui-table .ui-table-thead > tr > th, td {
+  text-align: center;
 }
